# Real-Time-Grid-Color-Detector-C-OpenCV-

./: CMakeLists.txt  README.md  grid_sonucum.txt  main.cpp
